@@ -1,3 +1,8 @@
+2012-11-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* updatewindow.py: Fixed bugs in UpdateWindowOLD &
+	  RetweetDialogOLD.
+
 2012-11-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* view.py, facebook/account.py: Added support for auto account
